fix collapsible text align

--- a/css/main.css
+++ b/css/main.css
@@ -3888,8 +3888,8 @@ footer .row {
     padding: 18px;
     width: 50%;
     border: none;
-    text-align: left;
     outline: none;
+    text-align: center;
     font-size: 15px;
   }
   
